# pipe-op

./: Cargo.toml  LICENSE  NOTES.md  README.md
src/: lib.rs
tests/: await-try.rs  basic.rs  chaining.rs  closure.rs  helpers.rs  many.rs  method.rs  multiple.rs  progress.rs  try.rs
